--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
             font-size: 18px;
             cursor: pointer;
             border: none;
+            background-color: #007bff;
             color: white;
             border-radius: 5px;
             transition: background-color 0.3s ease;
@@ -87,25 +88,25 @@
             background-color: #0056b3;
         }
         .calculator button.operator {
-            background-color: #f0ad4e; /* Orange für Operatoren */
-            color: black;
+            background-color: #ffa;
         }
         .calculator button.equals {
-            background-color: #28a745; /* Grüner Button für Ergebnis */
-        }
-        .calculator button.digit {
-            background-color: #007bff; /* Blau für Ziffern */
+            background-color: #28a745;
+            color: white;
         }
         .moon-phase {
-            width: 150px;
-            height: 150px;
+            width: 100px;
+            height: 100px;
             margin: 20px auto;
+            background-color: #000;
+            border-radius: 50%;
             position: relative;
+            overflow: hidden;
         }
         .moon-phase img {
             width: 100%;
-            height: auto;
-            display: block;
+            height: 100%;
+            object-fit: cover;
         }
     </style>
 </head>
@@ -122,20 +123,20 @@
             <div class="calculator">
                 <input type="text" id="display" disabled>
                 <div style="display: flex; flex-wrap: wrap; justify-content: center;">
-                    <button class="digit" onclick="appendNumber('7')">7</button>
-                    <button class="digit" onclick="appendNumber('8')">8</button>
-                    <button class="digit" onclick="appendNumber('9')">9</button>
+                    <button onclick="appendNumber('7')">7</button>
+                    <button onclick="appendNumber('8')">8</button>
+                    <button onclick="appendNumber('9')">9</button>
                     <button class="operator" onclick="chooseOperation('/')">/</button>
-                    <button class="digit" onclick="appendNumber('4')">4</button>
-                    <button class="digit" onclick="appendNumber('5')">5</button>
-                    <button class="digit" onclick="appendNumber('6')">6</button>
+                    <button onclick="appendNumber('4')">4</button>
+                    <button onclick="appendNumber('5')">5</button>
+                    <button onclick="appendNumber('6')">6</button>
                     <button class="operator" onclick="chooseOperation('*')">*</button>
-                    <button class="digit" onclick="appendNumber('1')">1</button>
-                    <button class="digit" onclick="appendNumber('2')">2</button>
-                    <button class="digit" onclick="appendNumber('3')">3</button>
+                    <button onclick="appendNumber('1')">1</button>
+                    <button onclick="appendNumber('2')">2</button>
+                    <button onclick="appendNumber('3')">3</button>
                     <button class="operator" onclick="chooseOperation('-')">-</button>
-                    <button class="digit" onclick="appendNumber('0')">0</button>
-                    <button class="digit" onclick="appendNumber('.')">.</button>
+                    <button onclick="appendNumber('0')">0</button>
+                    <button onclick="appendNumber('.')">.</button>
                     <button class="operator" onclick="clearDisplay()">C</button>
                     <button class="operator" onclick="chooseOperation('+')">+</button>
                     <button class="equals" onclick="compute()">=</button>
@@ -181,9 +182,7 @@
         <!-- Mondzyklus Sektion -->
         <div id="moon-phase" class="section">
             <h2>Mondzyklus</h2>
-            <div class="moon-phase">
-                <img id="moon-image" src="" alt="Mond">
-            </div>
+            <img id="moon-image" src="" alt="Mondphase">
             <p id="moon-phase-text"></p>
         </div>
 
@@ -280,7 +279,7 @@
         }
 
         function convertCurrency() {
-            const amount = parseFloat(document.getElementById('amount').value);
+            const amount = document.getElementById('amount').value;
             const currency = document.getElementById('currency').value;
             let result;
             if (currency === 'usdToEur') {
@@ -292,11 +291,11 @@
         }
 
         function showTime() {
-            const timezoneOffset = parseInt(document.getElementById('timezone').value);
+            const timezone = document.getElementById('timezone').value;
             let time = new Date();
-            let localOffset = time.getTimezoneOffset() * 60000;
-            let utcTime = time.getTime() + localOffset;
-            let timeInTimezone = new Date(utcTime + (3600000 * timezoneOffset));
+            const offset = time.getTimezoneOffset() * 60000;
+            const utcTime = time.getTime() + offset;
+            let timeInTimezone = new Date(utcTime + (3600000 * timezone));
             document.getElementById('clock').value = timeInTimezone.toLocaleTimeString();
         }
 
@@ -311,16 +310,28 @@
 
             if (phase < 0.02 || phase > 0.98) {
                 phaseText = 'Neumond';
-                imageSrc = 'path_to_new_moon_image.png'; // Pfad zu deinem Neumond-Bild
+                imageSrc = 'https://github.com/Bibelfratz1/Information.com/blob/main/new_moon.png?raw=true'; // URL zu deinem Neumond-Bild
             } else if (phase < 0.25) {
                 phaseText = 'Zunehmender Mond';
-                imageSrc = 'path_to_waxing_moon_image.png'; // Pfad zu deinem zunehmenden Mond-Bild
-            } else if (phase < 0.5) {
+                imageSrc = 'https://github.com/Bibelfratz1/Information.com/blob/main/waxing_crescent.png?raw=true'; // URL zu deinem zunehmenden Mond-Crescent-Bild
+            } else if (phase < 0.275) {
+                phaseText = 'Erstes Viertel';
+                imageSrc = 'https://github.com/Bibelfratz1/Information.com/blob/main/first_quarter.png?raw=true'; // URL zu deinem ersten Viertel-Bild
+            } else if (phase < 0.50) {
+                phaseText = 'Zunehmender Mond';
+                imageSrc = 'https://github.com/Bibelfratz1/Information.com/blob/main/waxing_gibbous.png?raw=true'; // URL zu deinem zunehmenden Mond-Gibbous-Bild
+            } else if (phase < 0.525) {
                 phaseText = 'Vollmond';
-                imageSrc = 'path_to_full_moon_image.png'; // Pfad zu deinem Vollmond-Bild
+                imageSrc = 'https://github.com/Bibelfratz1/Information.com/blob/main/full_moon.png?raw=true'; // URL zu deinem Vollmond-Bild
+            } else if (phase < 0.75) {
+                phaseText = 'Abnehmender Mond';
+                imageSrc = 'https://github.com/Bibelfratz1/Information.com/blob/main/waning_gibbous.png?raw=true'; // URL zu deinem abnehmenden Mond-Gibbous-Bild
+            } else if (phase < 0.775) {
+                phaseText = 'Letztes Viertel';
+                imageSrc = 'https://github.com/Bibelfratz1/Information.com/blob/main/last_quarter.png?raw=true'; // URL zu deinem letzten Viertel-Bild
             } else {
                 phaseText = 'Abnehmender Mond';
-                imageSrc = 'path_to_waning_moon_image.png'; // Pfad zu deinem abnehmenden Mond-Bild
+                imageSrc = 'https://github.com/Bibelfratz1/Information.com/blob/main/waning_crescent.png?raw=true'; // URL zu deinem abnehmenden Mond-Crescent-Bild
             }
             moonPhaseText.textContent = `Aktuelle Mondphase: ${phaseText}`;
             moonImage.src = imageSrc;
